--- a/my-app/src/styles/reccos.css
+++ b/my-app/src/styles/reccos.css
@@ -1,4 +1,5 @@
-.body {
+.recco-container {
+  margin-top: 100px;
   background-color: #282c34;
   display: flex;
   flex-direction: column;
@@ -6,7 +7,15 @@
   color: white;
 }
 
+.desc {
+	margin-bottom: 20px;
+}
+
 @media (max-width: 1000px) {
+	.recco-container {
+		margin-top: 70px;
+	}
+
 	.desc {
 		font-size: 13px;
 	}
